--- a/src/RubikCube.Tests/RubikCube.Tests.csproj
+++ b/src/RubikCube.Tests/RubikCube.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CubeEngineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringBasedCubeBuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
