--- a/src/RubikCube.Tests/RubikCube.Tests.csproj
+++ b/src/RubikCube.Tests/RubikCube.Tests.csproj
@@ -52,8 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrayBasedCubeBuilderTests.cs" />
+    <Compile Include="RotatedArrayBasedCubeBuilderTests.cs" />
     <Compile Include="CubeEngineTests.cs" />
+    <Compile Include="MatrixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringBasedCubeBuilderTests.cs" />
   </ItemGroup>
